@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h,v 1.72 1999/12/23 06:40:41 lusky Exp $
+ * $Id: config.h,v 1.73 1999/12/23 07:10:50 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -948,7 +948,6 @@ error CLIENT_FLOOD undefined.
 #endif
 
 #if defined(DEBUGMODE) || defined(DNS_DEBUG)
-   extern void debug();
 #  define Debug(x) debug x
 #  define LOGFILE LPATH
 #else
