@@ -1,5 +1,4 @@
-/************************************************************************
- *   IRC - Internet Relay Chat, src/s_serv.c
+/*   IRC - Internet Relay Chat, src/s_serv.c
  *   Copyright (C) 1990 Jarkko Oikarinen and
  *                      University of Oulu, Computing Center
  *
@@ -20,7 +19,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: s_serv.c,v 1.207 1999/08/01 23:33:55 lusky Exp $
+ *   $Id: s_serv.c,v 1.208 1999/08/20 00:54:10 lusky Exp $
  */
 #include "s_serv.h"
 #include "channel.h"
@@ -42,6 +41,7 @@
 #include "s_zip.h"
 #include "scache.h"
 #include "send.h"
+#include "s_debug.h"
 
 #include <assert.h>
 #include <string.h>
@@ -404,8 +404,8 @@ int check_server(struct Client* cptr)
    */
   if (!c_conf || !n_conf)
     {
-      Debug((DEBUG_DNS, "sv_cl: access denied: %s[%s@%s] c %x n %x",
-             name, cptr->name, cptr->host, c_conf, n_conf));
+      Debug((DEBUG_DNS, "sv_cl: access denied: [%s@%s] c %x n %x",
+             cptr->name, cptr->host, c_conf, n_conf));
       return 0;
     }
   /*
@@ -421,7 +421,7 @@ int check_server(struct Client* cptr)
   if (INADDR_NONE == c_conf->ipnum.s_addr)
     c_conf->ipnum.s_addr = cptr->ip.s_addr;
 
-  Debug((DEBUG_DNS,"sv_cl: access ok: %s[%s]", name, cptr->host));
+  Debug((DEBUG_DNS,"sv_cl: access ok: [%s]", cptr->host));
 
   return 1;
 }
