@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: s_user.c,v 1.214 1999/09/29 01:18:17 lusky Exp $
+ *  $Id: s_user.c,v 1.215 1999/10/10 01:30:28 lusky Exp $
  */
 #include "s_user.h"
 #include "channel.h"
@@ -1523,6 +1523,19 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
                    acptr->name, acptr->from->name, parv[1], parv[5], parv[6],
                    cptr->name);
 
+#ifndef LOCAL_NICK_COLLIDE
+	    sendto_serv_butone(NULL, /* all servers */
+		       ":%s KILL %s :%s (%s(NOUSER) <- %s!%s@%s)(TS:%s)",
+			       me.name,
+			       acptr->name,
+			       me.name,
+			       acptr->from->name,
+			       parv[1],
+			       parv[5],
+			       parv[6],
+			       cptr->name);
+#endif
+
             acptr->flags |= FLAGS_KILLED;
             /* Having no USER struct should be ok... */
             return exit_client(cptr, acptr, &me,
@@ -1567,14 +1580,16 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
        * be handled locally, provided all NICK's are propogated
        * globally. Just like channel joins are handled.
        *
-       * I think I got this right.
+       * I think I got this right. 
        * -Dianora
+       * There are problems with this, due to lag it looks like.
+       * backed out for now...
        */
-
+#ifdef LOCAL_NICK_COLLIDE
       /* just propogate it through */
       sendto_serv_butone(cptr, ":%s NICK %s :%lu",
                          parv[0], nick, sptr->tsinfo);
-
+#endif
       /*
       ** A new NICK being introduced by a neighbouring
       ** server (e.g. message type "NICK new" received)
@@ -1589,6 +1604,17 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
           sendto_one(acptr, form_str(ERR_NICKCOLLISION),
                      me.name, acptr->name, acptr->name);
 
+#ifndef LOCAL_NICK_COLLIDE
+	  sendto_serv_butone(NULL, /* all servers */
+			     ":%s KILL %s :%s (%s <- %s)",
+			     me.name, acptr->name, me.name,
+			     acptr->from->name,
+			     /* NOTE: Cannot use get_client_name twice
+			     ** here, it returns static string pointer:
+			     ** the other info would be lost
+			     */
+			     get_client_name(cptr, FALSE));
+#endif
           acptr->flags |= FLAGS_KILLED;
           return exit_client(cptr, acptr, &me, "Nick collision");
         }
@@ -1615,6 +1641,14 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
               sendto_one(acptr, form_str(ERR_NICKCOLLISION),
                          me.name, acptr->name, acptr->name);
 
+#ifndef LOCAL_NICK_COLLIDE
+	      sendto_serv_butone(sptr, /* all servers but sptr */
+				 ":%s KILL %s :%s (%s <- %s)",
+				 me.name, acptr->name, me.name,
+				 acptr->from->name,
+				 get_client_name(cptr, FALSE));
+#endif
+
               acptr->flags |= FLAGS_KILLED;
               (void)exit_client(cptr, acptr, &me, "Nick collision");
               return nickkilldone(cptr,sptr,parc,parv,newts,nick);
@@ -1638,7 +1672,21 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
       sendto_one(acptr, form_str(ERR_NICKCOLLISION),
                  me.name, acptr->name, acptr->name);
 
+#ifndef LOCAL_NICK_COLLIDE
+      sendto_serv_butone(NULL, /* KILL old from outgoing servers */
+			 ":%s KILL %s :%s (%s(%s) <- %s)",
+			 me.name, sptr->name, me.name, acptr->from->name,
+			 acptr->name, get_client_name(cptr, FALSE));
+#endif
+
       ServerStats->is_kill++;
+
+#ifndef LOCAL_NICK_COLLIDE
+      sendto_serv_butone(NULL, /* Kill new from incoming link */
+			 ":%s KILL %s :%s (%s <- %s(%s))",
+			 me.name, acptr->name, me.name, acptr->from->name,
+			 get_client_name(cptr, FALSE), sptr->name);
+#endif
 
       acptr->flags |= FLAGS_KILLED;
       (void)exit_client(NULL, acptr, &me, "Nick collision(new)");
@@ -1661,6 +1709,14 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
                        sptr->name, acptr->name, acptr->from->name,
                        get_client_name(cptr, FALSE));
           ServerStats->is_kill++;
+
+#ifndef LOCAL_NICK_COLLIDE
+	  sendto_serv_butone(cptr, /* KILL old from outgoing servers */
+			     ":%s KILL %s :%s (%s(%s) <- %s)",
+			     me.name, sptr->name, me.name, acptr->from->name,
+			     acptr->name, get_client_name(cptr, FALSE));
+#endif
+
           sptr->flags |= FLAGS_KILLED;
           if (sameuser)
             return exit_client(cptr, sptr, &me, "Nick collision(old)");
@@ -1681,6 +1737,15 @@ int m_nick(aClient *cptr, aClient *sptr, int parc, char *parv[])
           ServerStats->is_kill++;
           sendto_one(acptr, form_str(ERR_NICKCOLLISION),
                      me.name, acptr->name, acptr->name);
+
+#ifndef LOCAL_NICK_COLLIDE
+	  sendto_serv_butone(sptr, /* all servers but sptr */
+			     ":%s KILL %s :%s (%s <- %s)",
+			     me.name, acptr->name, me.name,
+			     acptr->from->name,
+			     get_client_name(cptr, FALSE));
+#endif
+
           acptr->flags |= FLAGS_KILLED;
           (void)exit_client(cptr, acptr, &me, "Nick collision");
           /* goto nickkilldone; */
